--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -4,184 +4,52 @@ org:  "BBC iPlayer"
 year:  "2017"
 team:  "Product team w/ 3 designers"
 date:   2017-03-04 12:00:00 -0600
-title: "iPlayer — Homepage"
+title: "iPlayer"
 categories: casestudies
-description: "Creating a better way for people to discover things to watch from the BBC."
+description: "Futureproofing the home of British TV"
 image: "iplayerlogo.svg"
 colour: F54A98
 imagesurl: /assets/images/iplayer/
+permalink: /case-study/iplayer
 
 ---
 
 
-{:class="postimagebig"}
-<img src="{{page.imagesurl}}iplayer-new.png"
-  alt="The new iPlayer homepage">
-
-
-My team’s focus in [iPlayer](http:/www.bbc.co.uk/iPlayer) was helping people find things they wanted to watch. This is both getting them to the content they came for and helping them to find new favourite programmes from the BBC.
-
-## Why we did it
-
-Across our regular research sessions, we saw that people were generally comfortable with finding something they already had in mind. However, discovering something new to watch wasn't a great experience.
-
-We set out to change that. Our homepage seemed to be where people experienced the most confusion. It was feeling outdated, and wasn't presenting the content as well as it could. We decided it was a good place to start.
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}iplayer-post-img1.png"
-alt="The iPlayer homepage before we started work">
-*The homepage before we started work*
-
-## Investigating the problem
-
-We started with some research. We watched people use the current site, and invited stakeholders to come along. We also interviewed those stakeholders. From this we found out that the homepage had been tweaked many times, without having been considered holistically in a while.
-
-We also began to discover a gap between how the organisation and the public understood the homepage. We discovered fundamental flaws with the way the content had ended up being structured, which was hindering peoples discovery of new shows.
-
-<!-- Specifically, when we watched people using the site it was clear that they didn't understand how things ended up in their order on the page. -->
-Specifically, it became clear that users had no idea **why** they were being shown the shows they were, or **how** they were ordered. Many people assumed it was 'computer generated', with others assuming that the content was (badly) personalised.
-
-In fact, iPlayer is lucky enough to have a fantastic editorial team, who actively curate the homepage and other pages where you can find shows. However, because  people did not understand why they were being shown this content, it made the page seem like a 'random jumble of stuff', rather than a carefully curated collection.
-
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}1008_Current.png"
-alt="Previous iPlayer homepage screenshot">
-*Because the content seemed like a random selection, many users resorted to the safety of the Most Popular list*
+<div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div></div>
 
 
 
-The lack of orientating devices on the page was also leading to people not exploring the breadth of content. Analytics showed an unusually steep drop off as users made their way down the page.
+iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been. 
 
-My hypothesis at this stage was that if we reassured users with clearer signposting, we'd make content more appealing and easier to scan, in turn increasing consumption.
 
-## Looking at the competition
+<div class="image-contain"><div class="screen"><img src="{{page.imagesurl}}1008_Current.png"></div></div>
 
-To further investigate my hypothesis, I conducted a competitor analysis of the ways that streaming services sign post their content. Though affinity mapping of these sections, I synthesized the results into a colour-coded visual. I presented this to our stakeholders and colleagues to show people where our offering diverged from our competitors.
 
+
+
+
+The main place for discovering something new, the homepage, was leaving people feeling confused. ‘It feels like a random jumble’, said one participant, whilst others speculated that the order was randomly generated.  
+
+This meant many people ended up relying on the ‘Most Popular’ list, rather than being able to find something that truly fit what they were looking for. 
+
+As well as research with the public, we talked to people internally to find out their frustrations. The editorial team felt restricted given a finite number of slots, and had no way to create curated collections of programmes.
+
+
+
+We ran co-design workshops both internally and with the public, letting people create their ideal homepage with printouts. From these we distilled four key pillars that people used to orient themselves. These were genres, boxsets, personalised lists and editorial collections.
+
+To future-proof the page, we built it on a framework of slices which could be swapped in and out and extended in the future. We A/B tested a few different types of slice and found that a carousel worked best.
+
+
+At the same time we have evolved the visual language of iPlayer. As well as refining the colour palette and tightening up the typography, we worked to make each programme component more compelling. 
 
 {:class="postimagebig"}
 <img src="{{page.imagesurl}}iplayer-competitors.png"
 alt="A small section of the competitor analysis">
-*A small section of the competitor analysis*
+
+As a result of our work the editorial team has more control to craft an exciting set of shows to dive into, and people spent far less time looking for something to watch.  
 
 
-<ul class="competitoranalysis">
-<li class="bigbullet" style="color:#D70854"> <h1>Featured</h1>
-<p style="color:#2F3140">Items promoted to all users.
-</p>
-</li>
-<li class="bigbullet" style="color:#1BA145"> <h1>Content affinity</h1>
-<p style="color:#2F3140">Items linked based on the show's content.
-</p>
-</li>
-<li class="bigbullet" style="color:#1450D9"> <h1>Platform related</h1>
-<p style="color:#2F3140">Items linked by their relationship with the platform.
-</p>
-</li>
-<li class="bigbullet" style="color:#F0A902"> <h1>User activity
-</h1>
-<p style="color:#2F3140">Items linked to the logged-in user.
-</p>
-</li>
-</ul>
-
-
-
-It helped us as a team to uncover the logic of how they piece together their homepages. Having this hung on the wall behind the team was a good reminder of the direction the user experience for content discovery was moving, and how we differed from that.
-
-We also found that our editorial colleagues had their own frustrations with the page. They found it inflexible and limiting. For example, there were only two slots on the page for curated collections, which often underperformed because of their cramped design.
-
-## Looking inwards
-
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}iplayer-post-img3.png"
-alt="Some examples of the output from the workshops we ran internally.">
-*Some examples of the output from the workshops we ran internally.*
-
-
-We ran workshops with iPlayer product teams to uncover peoples assumptions and desires for a new homepage. This took the form of a co-design session where participants created their own version of the homepage, using a set of printouts of components, which they pieced together, labelled and described to the group.
-
-
-## And looking outwards
-
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}iplayer-post-img4.png"
-alt="The results from the co-design sessions with the public, stuck up behind the team.">
-*The results from the co-design sessions with the public, stuck up behind the team.*
-
-
-I also adapted and ran these co-design sessions with members of the public, to get a better sense of their ideal iPlayer homepage. Combining this and our internal research allowed us to pull out common themes, which helped us design a better homepage for everyone. Some of those key themes that emerged were:
-
-{:class="findingslist"}
-1. Genre based collections help people orient themselves and fit with their mental models of our content
-2. People wanted to be clearly shown the 'Best of the BBC' — an opportunity to shout about our editorial offering
-3. Boxsets are a key part of our offering that we had been keeping hidden from people
-4. Users expect personalisation to be woven seamlessly into the product, and don't need it called out explicitly
-
-
-
-## The slice framework
-
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}iplayer-post-img6.png"
-alt="Wireframe of the three slice types alongside each other.">
-*Wireframe of the three slice types alongside each other.*
-
-
-From these we developed a new homepage based on a framework of slices. I worked with the team to develop how these slices looked and felt, working on both an MVP approach and options for the future.
-
-<p class="postimage">
-<video width="100%" autoplay loop muted>
-  <source src="{{page.imagesurl}}old_iplayer_collection.mp4" type="video/mp4">
-</video>
-<em>The old collection style, which hid our content behind a hover state and described shows in terms of 'programmes'</em>
-</p>
-
-
-<p class="postimage">
-<video width="100%" autoplay loop muted>
-  <source src="{{page.imagesurl}}new_iplayer_collection.mp4" type="video/mp4">
-</video>
-<em>The new collection style used to display the same content, split by series.</em>
-</p>
-
-The slices framework enabled us to experiment with new offerings much quicker, and allowed more flexibility to the editorial team to add time-based collections, such as for big sporting events.
-
-
-
-
-I investigated three navigation devices for these slices - strip, carousel and pocket. These were ABC tested, with the carousel ultimately being identified as the one that helped the most with our original goal - to help people discover more shows to watch.
-
-
-
-{:class="postimage"}
-<img src="{{page.imagesurl}}iPlayer_Strip_MVT.png"
-alt="Three of the slice styles we tested">
-*Three of the slice styles we tested*
-
-
-## Individual items
-
-
-<p class="postimage">
-<video width="100%" autoplay loop muted>
-  <source src="{{page.imagesurl}}iPlayer_hover_states.mp4" type="video/mp4">
-</video>
-<em>The new item hover states, designed to free up space to autoplay clips from the show.</em>
-</p>
-
-
-As well as redesigning the slices themselves, we also looked at the individual items which sit in them. Research showed us that users rarely read the secondary descriptive text, and relied on visuals to help them make a decision.We freed up the image space to autoplay a silent trailer on hover, whilst retaining the secondary text. This is yet to be implemented, however.
-
-
-The resulting homepage tested positively with users, and with a few final tweaks it went live to positive results. The new homepage is driving higher playback times for users and is more sustainable and flexible for the business.
-
-
-This project was completed over the space of three months with <a target="_blank" href="https://www.linkedin.com/in/filippo-cuttica-7a88b911/">Filipo</a> and <a target="_blank" href="https://www.linkedin.com/in/dimple-gohil-803a0a50/?locale=de_DE">Dimple</a>. It coincided with the rolling out of a visual refresh of iPlayer.
 
 
 {:class="postimage"}
