adding iplayer case study

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -15,16 +15,17 @@ permalink: /case-study/iplayer
 ---
 
 
-<div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div></div>
-
+<div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
+<p class="caption">iPlayer - Futureproofing the home of British TV</p>
+</div>
 
 
 iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been. 
 
 
-<div class="image-contain"><div class="screen"><img src="{{page.imagesurl}}1008_Current.png"></div></div>
-
-
+<div class="image-contain"><div class="screen"><img src="{{page.imagesurl}}1008_Current.png"></div>
+<p class="caption">The previous homepage</p>
+</div>
 
 
 
@@ -34,24 +35,40 @@ This meant many people ended up relying on the ‘Most Popular’ list, rather t
 
 As well as research with the public, we talked to people internally to find out their frustrations. The editorial team felt restricted given a finite number of slots, and had no way to create curated collections of programmes.
 
+<div class="image-contain"><div class="no-screen"><img src="{{page.imagesurl}}iplayer-post-img3.png"></div>
+<p class="caption">Results from a co-design workshop</p>
+</div>
 
 
 We ran co-design workshops both internally and with the public, letting people create their ideal homepage with printouts. From these we distilled four key pillars that people used to orient themselves. These were genres, boxsets, personalised lists and editorial collections.
 
+
+<div class="image-contain"><div class="screen"><img src="{{page.imagesurl}}iplayer-post-img6.png"></div>
+<p class="caption">Wireframe of the new slice structure</p>
+</div>
+
+
 To future-proof the page, we built it on a framework of slices which could be swapped in and out and extended in the future. We A/B tested a few different types of slice and found that a carousel worked best.
 
+<div class="image-contain"><div class="no-screen"><video width="100%" autoplay loop controls>
+  <source src="{{page.imagesurl}}iPlayer_hover_states.mp4" type="video/mp4">
+Your browser does not support videos.
+</video>
+</div>
+<p class="caption">Hover states, before and after</p>
+</div>
 
 At the same time we have evolved the visual language of iPlayer. As well as refining the colour palette and tightening up the typography, we worked to make each programme component more compelling. 
 
-{:class="postimagebig"}
-<img src="{{page.imagesurl}}iplayer-competitors.png"
-alt="A small section of the competitor analysis">
+
+
+
+
+
 
 As a result of our work the editorial team has more control to craft an exciting set of shows to dive into, and people spent far less time looking for something to watch.  
 
 
+<div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div></div>
 
 
-{:class="postimage"}
-<img src="{{page.imagesurl}}iplayer-new.png"
-alt="Previous iPlayer homepage screenshot">
