change home tile design

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -16,7 +16,7 @@ permalink: /case-study/iplayer
 
 
 <div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
-<p class="caption">iPlayer - Futureproofing the home of British TV</p>
+<p class="caption">Futureproofing the home of British TV</p>
 </div>
 
 
