adding parliament case study

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -6,7 +6,7 @@ team:  "Product team w/ 3 designers"
 date:   2017-03-04 12:00:00 -0600
 title: "iPlayer"
 categories: casestudies
-description: "Futureproofing the home of British TV"
+description: "Making it easier to understand what MPs and Lords do"
 image: "iplayerlogo.svg"
 colour: F54A98
 imagesurl: /assets/images/iplayer/
@@ -16,7 +16,8 @@ permalink: /case-study/iplayer
 
 
 <div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
-<p class="caption">Futureproofing the home of British TV</p>
+<p class="caption">UK Parliament</p>
+<p class="caption">Making it easier to understand what MPs and Lords do</p>
 </div>
 
 
