--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -6,7 +6,7 @@ team:  "Product team w/ 3 designers"
 date:   2017-03-04 12:00:00 -0600
 title: "iPlayer"
 categories: casestudies
-description: "Making it easier to understand what MPs and Lords do"
+description: "A better way to find something to watch"
 image: "iplayerlogo.svg"
 colour: F54A98
 imagesurl: /assets/images/iplayer/
@@ -15,9 +15,10 @@ permalink: /case-study/iplayer
 ---
 
 
-<div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
-<p class="caption">UK Parliament</p>
-<p class="caption">Making it easier to understand what MPs and Lords do</p>
+<div class="image-contain iplayer">
+<p class="caption">BBC iPlayer</p>
+<div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
+<p class="caption">A better way to find something to watch</p>
 </div>
 
 
