add team credits and styled back button

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -73,4 +73,5 @@ As a result of our work the editorial team has more control to craft an exciting
 
 <div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div></div>
 
+<p class="colophon">This work was completed as a Junior UX designer over 3 months, working closely with <a href="https://www.linkedin.com/in/filippo-cuttica-7a88b911/">Filippo Cuttica</a>, <a href="https://www.linkedin.com/in/dimple-gohil-803a0a50">Dimple Gohil</a> and <a href="https://www.linkedin.com/in/thomas-arnold">Thomas Arnold</a>.</p>
 
