--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-org:  "BBC iPlayer"
 year:  "2017"
 team:  "Product team w/ 3 designers"
 date:   2017-03-04 12:00:00 -0600
 title: "BBC iPlayer"
+class: "iplayer"
 categories: casestudies
 description: "A better way to find something to watch"
-image: "iplayerlogo.svg"
 colour: F54A98
 imagesurl: /assets/images/iplayer/
 permalink: /case-study/iplayer
