added first two case studies

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 year:  "2017"
-team:  "Product team w/ 3 designers"
+team:  "This work was completed as a Junior UX designer over 3 months, working closely with Filippo Cuttica, Dimple Gohil and Thomas Arnold."
+intro: "iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been."
 date:   2017-03-04 12:00:00 -0600
 title: "BBC iPlayer"
 class: "iplayer"
@@ -12,17 +13,6 @@ imagesurl: /assets/images/iplayer/
 permalink: /case-study/iplayer
 
 ---
-
-<!-- 
-<div class="image-contain iplayer">
-<p class="caption">BBC iPlayer</p>
-<div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div>
-<p class="caption">A better way to find something to watch</p>
-</div> -->
-
-
-<!-- iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been. 
- -->
 
 <div class="image-contain">
 <p class="caption">The previous homepage</p>
@@ -70,7 +60,5 @@ At the same time we have evolved the visual language of iPlayer. As well as refi
 As a result of our work the editorial team has more control to craft an exciting set of shows to dive into, and people spent far less time looking for something to watch.  
 
 
-<!-- <div class="image-contain iplayer"><div class="screen"><img src="../assets/images/home/iplayer-homepage.png"></div></div>
 
-<p class="colophon">This work was completed as a Junior UX designer over 3 months, working closely with <a href="https://www.linkedin.com/in/filippo-cuttica-7a88b911/">Filippo Cuttica</a>, <a href="https://www.linkedin.com/in/dimple-gohil-803a0a50">Dimple Gohil</a> and <a href="https://www.linkedin.com/in/thomas-arnold">Thomas Arnold</a>.</p> -->
 
