updating farewill wills case

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -55,7 +55,9 @@ Your browser does not support videos.
 
 </div>
 
-At the same time we have evolved the visual language of iPlayer. As well as refining the colour palette and tightening up the typography, we worked to make moment to moment interaction more compelling. New hover states were an example of this, designed to reveal programme information without losing the impact of the cover images. We imagined these could be used in the future to show short enticing clips of each programme.
+Finally we evolved iPlayer's visual language. As well as refining the colour palette and tightening up the typography, we worked to make moment to moment interaction more compelling. 
+
+We redesigned each hover state to reveal information without hiding imagery. Part of the thinking here was that slideshows or videos could be used on hover in the future.
 
 As a result of our work the editorial team has more control to craft an exciting set of shows to dive into, and people spent far less time looking for something to watch.  
 
