update homepage and case study styling

--- a/_posts/2017-03-04-iplayer.md
+++ b/_posts/2017-03-04-iplayer.md
@@ -1,12 +1,19 @@
 ---
 layout: post
-year:  "2017"
-team:  "This work was completed as a Junior UX designer over 3 months, working closely with Filippo Cuttica, Dimple Gohil and Thomas Arnold."
+year:  "2016"
+impact:
+  - Increased flexibility for the BBC editorial team
+  - A homepage structure that's lasted 5 years  
 intro: "iPlayer was created in 2007 as a way to catch up on TV you’d missed. Over time it became a place to discover new shows, too. However, in research sessions we saw that it wasn’t as easy to find something new as it should’ve been."
 date:   2017-03-04 12:00:00 -0600
+role: "UX designer"
+team: 
+  - Filipo Cutica • UX
+  - Dimple Gohil • UI 
+  - Thomas Arnold • UX
 title: "BBC iPlayer"
 class: "iplayer"
-categories: casestudies
+categories: casestudies bbc
 description: "A better way to find something to watch"
 colour: F54A98
 imagesurl: /assets/images/iplayer/
@@ -14,11 +21,8 @@ permalink: /case-study/iplayer
 
 ---
 
-<div class="image-contain">
-<p class="caption">The previous homepage</p>
-<div class="screen"><img src="{{page.imagesurl}}1008_Current.png"></div>
-</div>
 
+{% include image.html url='/assets/images/iplayer/1008_Current.png' description='The previous homepage' %}
 
 
 The main place for discovering something new, the homepage, was leaving people feeling confused. ‘It feels like a random jumble’, said one participant, whilst others speculated that the order was randomly generated.  
@@ -27,33 +31,21 @@ This meant many people ended up relying on the ‘Most Popular’ list, rather t
 
 As well as research with the public, we talked to people internally to find out their frustrations. The editorial team felt restricted given a finite number of slots, and had no way to create curated collections of programmes.
 
-<div class="image-contain">
-<p class="caption">Results from a co-design workshop</p>
-<div class="no-screen"><img src="{{page.imagesurl}}iplayer-post-img3.png"></div>
-</div>
+{% include image.html url='/assets/images/iplayer/iplayer-post-img3.png' description='Results from a co-design workshop' %}
 
 
 We ran co-design workshops both internally and with the public, letting people create their ideal homepage with printouts. From these we distilled four key pillars that people used to orient themselves. These were genres, boxsets, personalised lists and editorial collections.
 
 
-<div class="image-contain">
-<p class="caption">Wireframe of the new slice structure</p>
-<div class="screen"><img src="{{page.imagesurl}}iplayer-post-img6.png"></div>
+{% include image.html url='/assets/images/iplayer/iplayer-post-img6.png' description='Wireframe of the new slice structure' %}
 
-</div>
 
 
 To future-proof the page, we built it on a framework of slices which could be swapped in and out and extended in the future. We A/B tested a few different types of slice and found that a carousel worked best.
 
-<div class="image-contain">
-  <p class="caption">Hover states, before and after</p>
-  <div class="no-screen"><video width="100%" autoplay loop controls>
-    <source src="{{page.imagesurl}}iPlayer_hover_states.mp4" type="video/mp4">
-  Your browser does not support videos.
-  </video>
-  </div>
 
-</div>
+{% include video.html url='/assets/images/iplayer/iPlayer_hover_states.mp4' description='Hover states, before and after' %}
+
 
 Finally we evolved iPlayer's visual language. As well as refining the colour palette and tightening up the typography, we worked to make moment to moment interaction more compelling. 
 
